--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "html-webpack-plugin": "^3.2.0",
     "raw-loader": "^0.5.1",
     "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
   }
 }
